[gd_scene load_steps=6 format=3 uid="uid://dkl5nys3b5q0q"]

[ext_resource type="Texture2D" uid="uid://cwl4k40gmjwb8" path="res://Assets/world/tilemap_packed.png" id="1_0613k"]
[ext_resource type="Script" uid="uid://cc4srdra1uwd0" path="res://Scripts/life.gd" id="1_wvhb1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wvhb1"]
atlas = ExtResource("1_0613k")
region = Rect2(108, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_64xyt"]
atlas = ExtResource("1_0613k")
region = Rect2(72, 36, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_8es6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvhb1")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64xyt")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[node name="Life" type="Node2D"]
script = ExtResource("1_wvhb1")

[node name="Life1" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8es6c")
animation = &"full"
autoplay = "full"

[node name="Life2" type="AnimatedSprite2D" parent="."]
position = Vector2(31, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8es6c")
animation = &"full"
autoplay = "full"

[node name="Life3" type="AnimatedSprite2D" parent="."]
position = Vector2(62, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8es6c")
animation = &"full"
autoplay = "full"

[node name="Life4" type="AnimatedSprite2D" parent="."]
position = Vector2(93, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8es6c")
animation = &"full"
autoplay = "full"

[node name="Life5" type="AnimatedSprite2D" parent="."]
position = Vector2(124, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8es6c")
animation = &"full"
autoplay = "full"
